# palworld-panel

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  README.md  THIRD_PARTY_LICENSES.txt  install.sh
astrbot_plugin_palpanel/: README.md  __init__.py  _conf_schema.json  main.py  metadata.yaml  operations.py  requirements.txt  security.py  storage.py
backend/: .env.example  README.md  go.mod  go.sum
docs/: linux-validation.md  openapi.yaml  release-v1.0.0.md  release-v1.0.1.md  release-v1.0.2.md  release-v1.1.0.md  release-v1.2.0.md  release-v1.2.1.md  release-v1.3.0.md  windows-capability-matrix.md  windows-validation.md  workshop-mod-candidates-2026-07-18.md
frontend/: .env.development.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
palcalc-bridge/: PalCalc.Bridge.csproj  Program.cs  README.md
sav-cli/: Dockerfile  LICENSE  README.md  go.mod  go.sum
scripts/: build-sav-cli-dev.ps1  check-go-coverage.sh  e2e-windows.ps1  generate-collaboration-items.go  generate-palcalc-pals.go  generate-palcalc-passives.go  package-README-windows.md  package-README.md  package.ps1  package.sh  palpanel.env.example  palpanelctl  recover-windows-config.ps1  scan-secrets.sh  smoke-linux.sh  smoke-palcalc-no-icu.sh  smoke-windows.ps1  start.sh  (+15 more)
tools/palworld-uid-remap/: Cargo.toml
tools/palworld-uid-remap/src/: engine.rs  engine_tests.rs  lib.rs  main.rs  visitor.rs
tools/palworld-uid-remap/tests/: cli_contract.rs  filesystem_gates.rs  mapping_contract.rs  synthetic_world.rs  typed_rewrite.rs
(+427 files in other folders)
