[package]
name = "palworld-uid-remap"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "palworld_uid_remap"
path = "src/lib.rs"

[[bin]]
name = "palworld-uid-remap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uesave = { path = "../../third_party/uesave/uesave" }

[dev-dependencies]
tempfile = "3"
